--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "salo-cms-pwa",
   "keywords": ["cms", "astrojs", "bunjs", "cloudflare", "nuejs", "open-source"],
   "author": "Hrihorii Ilin <devopsick@pm.me>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "type": "module",
   "version": "1.0.1",
   "description": "To install dependencies:",
@@ -26,26 +26,36 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
+    "@astrojs/mdx": "^3.1.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/ts-plugin": "^1.10.0",
+    "@nanostores/react": "^0.7.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@staticcms/core": "^4.3.0",
+    "@staticcms/proxy-server": "^4.0.4",
     "@tailwindcss/cli": "^4.0.0-alpha.19",
     "@tailwindcss/postcss": "^4.0.0-alpha.19",
     "@tailwindcss/vite": "^4.0.0-alpha.19",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.14.2",
+    "astro-imagetools": "^0.9.0",
+    "async-validator": "^4.2.5",
+    "caniuse-lite": "^1.0.30001651",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convert": "^5.3.0",
     "detect-browser-es": "^0.1.0",
+    "js-convert-case": "^4.2.0",
+    "nanostores": "^0.11.2",
     "next-themes": "^0.3.0",
     "nuejs-core": "^0.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reading-time": "^1.5.0",
     "rehype-external-links": "^3.0.0",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^4.0.0-alpha.19",
@@ -72,8 +82,8 @@
     "biomes:fix": "bunx @biomejs/biome check --fix --unsafe .",
     "generate-pwa-assets": "pwa-assets-generator",
     "tailwind:cli": "bunx @tailwindcss/cli@next -i ./src/styles/app.css -o ./src/styles/dist/app.css",
-    "cms-proxy-server": "npx @staticcms/proxy-server",
-    "dev:demo": "cross-env BLOG_SLUG=blog PORTFOLIO_SLUG=work SHOP_SLUG=shop MENU_SLUG=menu WEBSITE_LANGUAGE=en CURRENCY=USD UNITS=metric NODE_VERSION=18 SNIPCART_KEY= astro dev"
+    "cms-proxy-server": "bunx @staticcms/proxy-server",
+    "dev:demo": "cross-env BLOG_SLUG=blog PORTFOLIO_SLUG=work SHOP_SLUG=shop MENU_SLUG=menu WEBSITE_LANGUAGE=en CURRENCY=USD UNITS=metric NODE_VERSION=22 SNIPCART_KEY=ZDVjZmQwYmUtMzNlYy00OGEyLTkxMTItMTg4YTI5NGQxN2I3NjM4MjgzOTQyMzA2MTM1NjI1 bunx --bun astro dev --verbose"
   },
   "trustedDependencies": ["@biomejs/biome", "esbuild", "sharp"]
 }
