--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "biomejs.biome",
+  "editor.defaultFormatter": "astro-build.astro-vscode",
   "[javascript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
