--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "salo-cms-pwa",
-  "keywords": ["cms", "astrojs", "bunjs", "cloudflare", "nuejs", "open-source"],
+  "keywords": [
+    "cms",
+    "astrojs",
+    "bunjs",
+    "cloudflare",
+    "nuejs",
+    "open-source"
+  ],
   "author": "Hrihorii Ilin <devopsick@pm.me>",
   "license": "Apache-2.0",
   "type": "module",
@@ -11,15 +18,17 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@inlang/cli": "^2.18.1",
     "@types/bun": "latest",
     "@types/html": "^1.0.4",
     "@types/node": "^22.3.0",
     "@types/web": "^0.0.155",
     "astro-compress": "^2.3.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "editorconfig-checker": "^5.1.8",
     "unplugin-auto-import": "^0.18.2",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5"
+    "@inlang/paraglide-js": "1.11.2"
   },
   "peerDependencies": {
     "typescript": "^5.5.4"
@@ -30,6 +39,8 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/ts-plugin": "^1.10.0",
+    "@inlang/plugin-i18next": "^4.14.13",
+    "@inlang/sdk": "^0.36.3",
     "@nanostores/react": "^0.7.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@staticcms/core": "^4.3.0",
@@ -48,6 +59,7 @@
     "convert": "^5.3.0",
     "detect-browser-es": "^0.1.0",
     "js-convert-case": "^4.2.0",
+    "mdast-util-to-string": "^4.0.0",
     "nanostores": "^0.11.2",
     "next-themes": "^0.3.0",
     "nuejs-core": "^0.5.0",
@@ -68,7 +80,7 @@
     "dev": "bunx --bun astro dev",
     "start": "bun astro check --verbose && bunx --bun astro dev --verbose",
     "checker": "conc bun:check:*",
-    "build": "bun astro check --verbose && bunx --bun astro build --verbose",
+    "build": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide && bun astro check --verbose && bunx --bun astro build --verbose",
     "preview": "bunx --bun astro build --verbose && bun wrangler pages dev ./dist",
     "astro": "astro",
     "deploy": "bunx --bun astro build && bun wrangler pages deploy ./dist",
@@ -83,7 +95,12 @@
     "generate-pwa-assets": "pwa-assets-generator",
     "tailwind:cli": "bunx @tailwindcss/cli@next -i ./src/styles/app.css -o ./src/styles/dist/app.css",
     "cms-proxy-server": "bunx @staticcms/proxy-server",
-    "dev:demo": "cross-env BLOG_SLUG=blog PORTFOLIO_SLUG=work SHOP_SLUG=shop MENU_SLUG=menu WEBSITE_LANGUAGE=en CURRENCY=USD UNITS=metric NODE_VERSION=22 SNIPCART_KEY=ZDVjZmQwYmUtMzNlYy00OGEyLTkxMTItMTg4YTI5NGQxN2I3NjM4MjgzOTQyMzA2MTM1NjI1 bunx --bun astro dev --verbose"
+    "dev:demo": "cross-env BLOG_SLUG=blog PORTFOLIO_SLUG=work SHOP_SLUG=shop MENU_SLUG=menu WEBSITE_LANGUAGE=en CURRENCY=USD UNITS=metric NODE_VERSION=22 SNIPCART_KEY=ZDVjZmQwYmUtMzNlYy00OGEyLTkxMTItMTg4YTI5NGQxN2I3NjM4MjgzOTQyMzA2MTM1NjI1 bunx --bun astro dev --verbose",
+    "postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide"
   },
-  "trustedDependencies": ["@biomejs/biome", "esbuild", "sharp"]
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "esbuild",
+    "sharp"
+  ]
 }
